--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="or-sign-in">
-                        <p>Or Sign In</p>
+                        <p>Or <span><a href="">Sign in</a></span></p>
                     </div>
                 </div>
             </div>
@@ -206,9 +206,14 @@
     <section>
         <div class="empty-map">
         </div>
+       <div class="cities-txt-content">
         <div class="cities-txt">
             <h2>Cities near me</h2>
         </div>
+        <div class="txt-town">
+            <a href="">View all 500+ Cities</a>
+        </div>
+       </div>
         <div class="map-section">
             <img src="images/map.png" alt="">
         </div>
@@ -256,8 +261,13 @@
         <div class="country-section">
             <div class="empty-country">
             </div>
-            <div class="country-txt">
-                <p>Countries with Uber Eats</p>
+            <div class="counties-txt-content">
+                <div class="country-txt">
+                    <p>Countries with Uber Eats</p>
+                </div>
+                <div class="txt-countries">
+                    <a href="">View all countries</a>
+                </div>
             </div>
             <div class="countries">
                 <div class="countries-name">
@@ -273,14 +283,15 @@
                     <p>Mexico</p>
                 </div>
                 <div class="countries-name">
-                    <p>Canada</p>
+                    <p>canada</p>
                 </div>
                 <div class="countries-name">
                     <p>Netherlands</p>
                 </div>
                 <div class="countries-name">
                     <p>chile</p>
-                </div><div class="countries-name">
+                </div>
+                <div class="countries-name">
                     <p>New Zealand</p>
                 </div>
                 <div class="countries-name">
@@ -290,7 +301,7 @@
                     <p>panama</p>
                 </div>
                 <div class="countries-name">
-                    <p>Dominican Republic</p>
+                    <p>Domonican Republic</p>
                 </div>
                 <div class="countries-name">
                     <p>Poland</p>
@@ -341,7 +352,7 @@
                     <p>Japan</p>
                 </div>
                 <div class="countries-name">
-                    <p>United kingdom</p>
+                    <p>United Kingdom</p>
                 </div>
                 <div class="countries-name">
                     <p>Kenya</p>
@@ -369,8 +380,8 @@
                     <div class="appstore">
                         <img src="images/Download on the App Store.svg" alt="">
                     </div>
-                    <div class="google-paly">
-                        <img src="images/Download on the App Store.svg" alt="">
+                    <div class="appstore">
+                        <img src="images/google-play.png" alt="">
                     </div>
                 </div>
             </div>
@@ -380,16 +391,17 @@
                 <p>Buy gift cards </p>
                 <p>Add your resturants</p>
                 <p>Sign up to deliver </p>
-                <p>Create a business account</p>
+                <p>create a business account</p>
                 <p>Promotions</p>
             </div>
             <div class="resturants-near">
                 <p>Restaurants near me</p>
                 <p>View all cities</p>
                 <p>View all countries</p>
-                <p>Pickup near me</p>
-                <p>About Uber eats</p>
+                <p>Pick up near me</p>
+                <p>About Uber Eats</p>
                 <p>Shop groceries</p>
+                <p><span><img src="images/eng-export.svg" alt=""></span>  English</p>
             </div>
            </div>
            </div>
@@ -405,18 +417,18 @@
                       <img src="images/instagram (1).svg" alt="">
                     </div>
                 </div>
+                
                 <div class="privacy-policy">
                     <p>Privacy Policy</p>
                     <p>Terms</p>
                     <p>Pricing</p>
-                    <p>Do not sell or share my personal informations</p>
-                    <p>this site is protected by ReCAPTCHA and the google Privacy Policy and Terms of Service apply</p>
-                    <p>@ 2024 Uber Techologies Inc</p>
+                    <p>Do not sell or share my personal information</p>
+                    <p>This site is protected by reCAPTCHA and the Google Privacy Policy and terms of Service apply.</p>
+                    <p> &copy; 2024 Uber Techologies Inc</p>
                 </div>
             </div>
         </div>
     </section>
     
-
 </body>
 </html>
